# esapiens

./: .env.example  .gitignore  BLUEPRINT.md  DEPLOY.md  Dockerfile  PLAN.md  README.md  SECURITY-CONCERNS.md  docker-compose.yml  pyproject.toml  ruff.toml
backend/: .dockerignore  .env.example  Dockerfile  E.SAPIENS_ENVIRONMENT.md  agent.py  alembic.ini  app.py  auth.py  bax_sequences.json  compress.py  dynamic_tools.py  expression_matrix.csv  file_upload.py  gradio_app.py  gse161354_expr_summary.json  intent_classifier.py  launch_gradio_md_ui.py  main.py  matrix_summary.json  md_simulation.py  modal_compute.py  modal_tasks.py  prompts.json  prompts.py  pyproject.toml  report.py  requirements.txt  result.py  sample_metadata.csv  skill_loader.py  storage.py  streaming.py  tools.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_run_progress.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/middleware/: __init__.py  redaction.py
backend/app/models/: __init__.py  event.py  grant.py  outbox.py  pipeline.py  run.py  session.py  user.py
backend/app/routers/: __init__.py  auth.py  chat.py  grants.py  pipelines.py  runs.py  sessions.py  sse.py  ws.py
backend/app/schemas/: bio_container.py  event.py  grant.py  pipeline.py  run.py  session.py
backend/app/services/: __init__.py  agent.py  async_jobs.py  biocontainers.py  budget.py  code_sandbox.py  event_engine.py  llm.py  modal_compute.py  reconciler.py  subagents.py  supervisor.py
backend/app/workers/: __init__.py  outbox_relay.py
bioSkills/alignment/: SKILL.md
bioSkills/atac-seq/: SKILL.md
bioSkills/chemoinformatics/: SKILL.md
bioSkills/chip-seq/: SKILL.md
docs/: architecture.md  requirements.md
echosapiens/: __init__.py  agents.py  app.py  config.py  error_handler.py  gcs_manager.py  llm_client.py  sandbox_manager.py  state.py  workflow_graph.py
frontend/: Dockerfile  index.html  next.config.js  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  (+4 more)
modalSkill/: SKILL.md
scripts/: start-dev.sh  start-prod.sh
tests/: __init__.py  test_api.py
(+93 files in other folders)
